# vezha.digital

./: .env.example  .gitignore  DEPLOY.md  Makefile  RAILWAY_DEPLOY.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  mockup.html  nginx.conf  nginx.conf.example  package-lock.json  pyproject.toml  railway.toml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml  railway.toml  requirements.txt  seed.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2f19452665d2_replace_icon_type_icon_url_model_with_.py  4e30cf80cf90_merge_heads.py  740f21d0a994_init.py  8c704a2ef5c5_add_icon_type_and_icon_url_model_to_.py  a1b2c3d4e5f6_add_client_types_table.py  a1b2c3d4e5f7_add_service_features_table.py  b2c3d4e5f6a7_add_about_sections_table.py  b2c3d4e5f6a8_add_work_stage_extended_fields_and_points.py  c3d4e5f6a7b8_increase_icon_field_size.py  d4e5f6a7b8c9_add_section_visibility_table.py  e294429ffd46_add_deadline_and_about_to_services.py  e5f6a7b8c9d0_add_service_items_table.py  f6a7b8c9d0e1_add_service_examples_table.py
backend/app/: config.py  main.py
backend/app/core/: __init__.py  database.py  deps.py  security.py  storage.py
backend/app/models/: __init__.py  about_section.py  admin.py  advantage.py  client_type.py  contact_request.py  project.py  section_visibility.py  service.py  service_example.py  service_feature.py  service_item.py  setting.py  tech_stack.py  work_stage.py  work_stage_point.py
backend/app/schemas/: __init__.py  about_section.py  advantage.py  auth.py  client_type.py  common.py  (+11 more)
(+119 files in other folders)
